--- a/style.css
+++ b/style.css
@@ -29,10 +29,14 @@ span:hover {
     cursor: pointer;
   }
 
-p {
+  h1{
     display: inline-block;
     font-size: 20px;
     color: black;
+  }
+
+p {
+    display: inline-block;
     margin-right: 10px;
   }
   p.valueLi {
